--- a/package.json
+++ b/package.json
@@ -3,11 +3,16 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node index.js"
+    "start": "nodemon ./bin/www",
+    "test": "mocha"
   },
   "dependencies": {
+    "app-root-path": "^2.1.0",
+    "axios": "^0.18.0",
     "body-parser": "~1.18.2",
+    "circular-json": "^0.5.5",
     "cookie-parser": "~1.4.3",
+    "cors": "^2.8.4",
     "csv-parser": "^1.12.0",
     "csv2json": "^1.4.1",
     "csvtojson": "^1.1.9",
@@ -16,14 +21,24 @@
     "excel": "^0.1.7",
     "excel2json": "^0.3.1",
     "express": "~4.15.5",
+    "express-rate-limit": "^2.11.0",
     "morgan": "~1.9.0",
     "node-excel-to-json": "0.0.3",
     "serve-favicon": "~2.4.5",
+    "supertest": "^3.1.0",
     "xls-to-json": "^0.4.0"
   },
   "devDependencies": {
+    "bcrypt": "^2.0.1",
+    "compression": "^1.7.2",
     "excel-to-json": "^1.0.0",
-    "mongoose": "^5.0.4"
+    "helmet": "^3.12.1",
+    "jsonwebtoken": "^8.2.2",
+    "mocha": "^5.2.0",
+    "mongoose": "^5.0.4",
+    "nodemailer": "^4.6.5",
+    "nodemailer-smtp-transport": "^2.7.4",
+    "winston": "^2.4.1"
   },
   "engines": {
     "node": "*"
