--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "express-rate-limit": "^2.11.0",
     "morgan": "~1.9.0",
     "node-excel-to-json": "0.0.3",
+    "nodemon": "^1.18.5",
     "serve-favicon": "~2.4.5",
     "supertest": "^3.1.0",
     "xls-to-json": "^0.4.0"
