--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "nodemon": "^1.18.5",
     "serve-favicon": "~2.4.5",
     "supertest": "^3.1.0",
-    "xls-to-json": "^0.4.0"
+    "xls-to-json": "^0.4.0",
+    "mongoose": "^5.3.11"
   },
   "devDependencies": {
     "bcrypt": "^2.0.1",
@@ -36,7 +37,7 @@
     "helmet": "^3.12.1",
     "jsonwebtoken": "^8.2.2",
     "mocha": "^5.2.0",
-    "mongoose": "^5.3.10",
+    "mongoose": "^5.3.11",
     "nodemailer": "^4.6.5",
     "nodemailer-smtp-transport": "^2.7.4",
     "winston": "^2.4.1"
