--- a/package.json
+++ b/package.json
@@ -28,12 +28,11 @@
     "serve-favicon": "~2.4.5",
     "supertest": "^3.1.0",
     "xls-to-json": "^0.4.0",
-    "mongoose": "^5.3.11",
-    "compression": "^1.7.2"
+    "mongoose": "^5.3.11"
   },
   "devDependencies": {
     "bcrypt": "^2.0.1",
-    "compression": "^1.7.2",
+    "compression": "^1.7.3",
     "excel-to-json": "^1.0.0",
     "helmet": "^3.12.1",
     "jsonwebtoken": "^8.2.2",
@@ -41,7 +40,7 @@
     "mongoose": "^5.3.11",
     "nodemailer": "^4.6.5",
     "nodemailer-smtp-transport": "^2.7.4",
-    "winston": "^2.4.1"
+    "winston": "^2.4.4"
   },
   "engines": {
     "node": "*"
