--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "serve-favicon": "~2.4.5",
     "supertest": "^3.1.0",
     "xls-to-json": "^0.4.0",
-    "mongoose": "^5.3.11"
+    "mongoose": "^5.3.11",
+    "winston": "^2.4.4"
   },
   "devDependencies": {
     "bcrypt": "^2.0.1",
