--- a/package.json
+++ b/package.json
@@ -28,7 +28,14 @@
     "serve-favicon": "~2.4.5",
     "supertest": "^3.1.0",
     "xls-to-json": "^0.4.0",
+    "bcrypt": "^2.0.1",
+    "excel-to-json": "^1.0.0",
+    "helmet": "^3.12.1",
+    "jsonwebtoken": "^8.2.2",
+    "mocha": "^5.2.0",
     "mongoose": "^5.3.11",
+    "nodemailer": "^4.6.5",
+    "nodemailer-smtp-transport": "^2.7.4",
     "winston": "^2.4.4"
   },
   "devDependencies": {
